# BiometricTemplateGeneration

./: .gitignore  AGENTS.md  PHASE2_COMPLETION_REPORT.md  README.md  main.py  pyproject.toml  requirements.txt  user1_template.npy
docs/: ANALYSIS_REPORT.md  CHANGES.md  PHASE3_BENCHMARK_REPORT.md  PROJECT_SUMMARY.md  plan.txt
envs/: environment-cpu.yml  environment-gpu.yml
src/: Dataset_Loader.py  ShowScores.py  __init__.py  casia_genlabels.py  config.py  dataset.py  delMe.py  gen-labels.py  gen_labels.py  generate_template.py
src/Iris-model/: dataset.py  eval_threshold.py  preprocess.py  test.py  train.py
src/crypto_utils/: __init__.py  ecc_utils.py  hash_utils.py  quantization.py
src/custom_bch/: bch.c  bch.h  bch_bridge.c  libcustombch.exp  libcustombch.lib
src/fingerprint/: ComputeScores.py  Loss_plot.py  Plot.py  Updated_plot.py  __init__.py  accuracyCheck.py  casia_preprocess.py  casia_train.py  eval_threshold.py  eval_vault.py  eval_vault_cus_bch.py  gen_embeddings.py  generate_roc.py  idv_inference.py  idv_inference_CASIA.py  idv_inference_FVC2004.py  inference_CASIA_new.py  inference_CASIA_old.py  loss_plot_1.ipynb  metrics.py  metrics_all.py  preprocess_fingerprint.py  test.py  test_4finger.py  train.py  verify_unoptimized.py
src/fingerprint-model/: dataset.py  eval_threshold.py  preprocess.py  test.py  train.py
src/preprocess/: iris.py
src/utils/: ComputeScores.py  Dataset_Loader.py  ShowScores.py  __init__.py  accuracyCheck.py  gen_labels.py  logger.py  model_downloader.py  (+5 more)
tests/: integration_phase2.py  test_crypto_utils.py  test_phase2.py
(+38 files in other folders)
