[project]
name = "biometrictemplategeneration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "kagglehub>=0.4.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]
[tool.uv]
package = true
environments = [
  "sys_platform == 'win32'"
]